Credits no longer let the whole nav-bar jump

--- a/style.css
+++ b/style.css
@@ -54,6 +54,8 @@ table {
 
 #credits {
     font-family:monospace;
+    min-width: 20%;
+    text-align: right;
 }
 
 #login-screen{
